// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColorPill component > dispatches click event 1`] = `
<span
  class="inline-flex items-center p-2 hover:bg-current-light "
  role="button"
  style="--color-current-light: #fff"
>
  <span
    class="inline-flex mr-3"
  >
    <span
      style="width: 16px; height: 24px; background-color: rgb(255, 255, 255);"
    />
     
    <span
      style="width: 16px; height: 24px; background-color: rgb(0, 0, 0);"
    />
     
    <span
      style="width: 16px; height: 24px; background-color: rgb(51, 51, 51);"
    />
  </span>
   
</span>
`;

exports[`ColorPill component > mounts 1`] = `
<body>
  <div>
    <span
      class="inline-flex items-center p-2 hover:bg-current-light "
      role="button"
      style="--color-current-light: #fff"
    >
      <span
        class="inline-flex mr-3"
      >
        <span
          style="width: 16px; height: 24px; background-color: rgb(255, 255, 255);"
        />
         
        <span
          style="width: 16px; height: 24px; background-color: rgb(0, 0, 0);"
        />
         
        <span
          style="width: 16px; height: 24px; background-color: rgb(51, 51, 51);"
        />
      </span>
       
    </span>
  </div>
</body>
`;

exports[`ColorPill component > renders with custom label 1`] = `
<span
  class="inline-flex items-center p-2 hover:bg-current-light "
  role="button"
  style="--color-current-light: #fff"
>
  <span
    class="inline-flex mr-3"
  >
    <span
      style="width: 16px; height: 24px; background-color: rgb(255, 255, 255);"
    />
     
    <span
      style="width: 16px; height: 24px; background-color: rgb(0, 0, 0);"
    />
     
    <span
      style="width: 16px; height: 24px; background-color: rgb(51, 51, 51);"
    />
  </span>
   
  <span
    class="text leading-none pr-3"
  >
    Test Label
  </span>
</span>
`;
